@@ -5,7 +5,8 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix memberblock width if the referenced contact name is too long.
+  [elioschmutz]
 
 
 1.6.1 (2014-03-25)
